--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "udacity-c2-image-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf www/ || true",
-    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
+    "build": "npm run clean && tsc && copy package.json www\\package.json && mkdir www\\tmp\\ && cd www && tar -czvf Archive.zip . && cd ..",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "repository": {
@@ -20,16 +20,16 @@
   },
   "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
   "devDependencies": {
-    "@types/bluebird": "^3.5.33",
-    "@types/express": "^4.17.0",
-    "@types/node": "^11.13.17",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "@types/bluebird": "^3.5.38",
+    "@types/express": "^4.17.15",
+    "@types/node": "^14.17.3",
+    "ts-node-dev": "^2.0.0",
+    "tslint": "^5.20.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.1209.0",
-    "express": "^4.17.1",
+    "axios": "^1.5.1",
+    "express": "^4.18.2",
     "jimp": "^0.16.1",
     "lodash": "^4.17.15",
     "rimraf": "^3.0.2"
